Readme and envs.